[project]
name="cbx"
version="0.1.0"
authors = [
    {name = "Tim Roith", email = "tim.roith@fau.de"},
]
description="CBXpy"
dependencies = [  
    'numpy', 
    'scipy', 
    'scikit-learn', 
    'matplotlib'
    ]
readme = "README.rst"
requires-python = ">3.5.2"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
    ]

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[options.extras_require] # Optional dependencies
test =
    pytest
    torch


[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "B"]

# Never enforce `E501` (line length violations).
ignore = ["E501"]

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]
"path/to/file.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]
